Update Launcher, Contest mode & Tests